Remove logo's redundant styling and fix alignment of instructions header

--- a/src/App.css
+++ b/src/App.css
@@ -138,10 +138,6 @@ main {
 \*--------------------------------------------------------------------------*/
 .logo {
   position: absolute;
-  top: 0.4rem;
-  right: -0.3rem;
-  top: 0.5rem;
-  right: -0.5rem;
   top: 0.6rem;
   right: 0.3rem;
   z-index: 1;
@@ -749,7 +745,7 @@ button:hover:enabled {
 }
 
 .instructions-group__inner h3 {
-  max-width: 26ch;
+  max-width: 31ch;
   font-size: 1.25rem;
 }
 
@@ -808,7 +804,6 @@ button:hover:enabled {
 .instruction__header > * {
   display: flex;
   justify-content: flex-start;
-  align-items: center;
   margin: calc(var(--space) / 2 * -1);
 }
 
